--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="/blog.html">Blog</a>
     </nav>
     <main>
-        <h1>Vojtěch Nedvěd</h1>
+        <h1>VVVVVVojtěch Nedvěd</h1>
         <h2>Data Science Manager</h2>
         <p class="tagline">Transforming data into action.</p>
         <p class="intro">Leading global analytics teams in building machine learning solutions for marketing optimization, pricing, and more.</p>
