--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <nav>
-        <a href="/index.html">Home</a>
-        <a href="/about.html">About</a>
-        <a href="/experience.html">Experience</a>
-        <a href="/projects.html">Projects</a>
-        <a href="/contact.html">Contact</a>
-        <a href="/hobbies.html">Hobbies</a>
-        <a href="/blog.html">Blog</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="experience.html">Experience</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="blog.html">Blog</a>
     </nav>
     <main>
         <h1>Vojtěch Nedvěd</h1>
