--- a/hobbies.html
+++ b/hobbies.html
@@ -3,28 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hobbies | Vojtěch Nedvěd</title>
+    <title>Vojtěch Nedvěd | Hobbies</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <a href="/index.html">Home</a>
-        <a href="/about.html">About</a>
-        <a href="/experience.html">Experience</a>
-        <a href="/projects.html">Projects</a>
-        <a href="/contact.html">Contact</a>
-        <a href="/hobbies.html">Hobbies</a>
-        <a href="/blog.html">Blog</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="experience.html">Experience</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="blog.html">Blog</a>
     </nav>
     <main>
-        <h1>Beyond Work</h1>
+        <h1>My Hobbies</h1>
         <section>
-            <h2>Personal Interests</h2>
-            <p>I enjoy exploring technology trends, mentoring future data professionals, and traveling.</p>
+            <h2>Outdoor Activities</h2>
+            <p>I enjoy spending time outdoors, whether it's hiking, cycling, or exploring new places.</p>
         </section>
         <section>
-            <h2>Education & Mentoring</h2>
-            <p>I'm passionate about education — I've taught financial literacy in schools across Czechia using gamified board games.</p>
+            <h2>Reading</h2>
+            <p>I'm an avid reader, particularly interested in science fiction, technology, and personal development books.</p>
+        </section>
+        <section>
+            <h2>Technology</h2>
+            <p>In my free time, I like to experiment with new technologies and stay up to date with the latest developments in data science and machine learning.</p>
         </section>
     </main>
 </body>
