--- a/about.html
+++ b/about.html
@@ -20,31 +20,31 @@
         <h1>About Me</h1>
         <section>
             <h2>Bio</h2>
-            <p>Hello, I'm Vojtěch — a data science & analytics leader with a passion for converting raw data into strategic insights. From consulting for financial institutions to optimizing mobile apps and marketing spend for global brands, I've delivered value across diverse industries.</p>
-            <p>I'm currently leading a globally distributed data science team at Gen (Avast, Norton, AVG, etc.), building cutting-edge marketing optimization solutions.</p>
+            <p>Hello, I'm Vojtěch — a senior data ant in the Great Ant Colony! I specialize in analyzing sugar crystal patterns and optimizing leaf-carrying routes. From consulting for neighboring ant colonies to optimizing our underground tunnel systems, I've helped make our colony more efficient than ever!</p>
+            <p>I'm currently leading a team of worker ants in the Data Analysis Chamber, where we process information about food sources and potential threats using our advanced antennae-based data collection system.</p>
         </section>
         <section>
             <h2>Top Skills</h2>
             <ul>
-                <li>Marketing Analytics</li>
-                <li>Data Science & Machine Learning</li>
-                <li>Leadership & Strategy</li>
+                <li>Pheromone Trail Analysis</li>
+                <li>Leaf Pattern Recognition</li>
+                <li>Colony Leadership & Strategy</li>
             </ul>
         </section>
         <section>
             <h2>Languages</h2>
             <ul>
-                <li>Czech — Native</li>
-                <li>English — Professional</li>
-                <li>Spanish — Professional</li>
+                <li>Ant Sign Language — Native</li>
+                <li>Bee Communication — Professional</li>
+                <li>Spider Web Morse Code — Professional</li>
             </ul>
         </section>
         <section>
             <h2>Awards</h2>
             <ul>
-                <li>1st Place – PwC Innovations Hackathon</li>
-                <li>1st Place – Novartis Hackathon</li>
-                <li>1st Place – DataCup</li>
+                <li>1st Place – Annual Leaf Carrying Competition</li>
+                <li>1st Place – Tunnel Architecture Design Contest</li>
+                <li>1st Place – Colony Defense Strategy Cup</li>
             </ul>
         </section>
     </main>
