--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,24 @@
         <a href="./blog.html">Blog</a>
     </nav>
     <main>
-        <h1>Blog</h1>
-        <p>Coming soon: journal-style posts and articles.</p>
+        <h1>Ant Blog</h1>
+        <section>
+            <article>
+                <h2>The Art of Tunnel Architecture</h2>
+                <p class="date">March 15, 2024</p>
+                <p>Exploring the latest trends in underground construction and how they're revolutionizing ant colony living...</p>
+            </article>
+            <article>
+                <h2>Pheromone Communication: A Beginner's Guide</h2>
+                <p class="date">March 10, 2024</p>
+                <p>Learn the basics of ant communication and how to master the complex language of pheromones...</p>
+            </article>
+            <article>
+                <h2>Top 10 Leaf Collection Spots</h2>
+                <p class="date">March 5, 2024</p>
+                <p>Discover the best locations for finding rare and nutritious leaves in your area...</p>
+            </article>
+        </section>
     </main>
 </body>
 </html> 
