--- a/contact.html
+++ b/contact.html
@@ -17,23 +17,27 @@
         <a href="./blog.html">Blog</a>
     </nav>
     <main>
-        <h1>Contact</h1>
-        <section class="contact-info">
-            <h2>Get in Touch</h2>
-            <p>Email: <a href="mailto:vojtechnedved@seznam.cz">vojtechnedved@seznam.cz</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/vojtechnedved" target="_blank">linkedin.com/in/vojtechnedved</a></p>
+        <h1>Contact Me</h1>
+        <section>
+            <h2>Pheromone Communication</h2>
+            <p>Send me a message through our colony's pheromone network:</p>
+            <ul>
+                <li>Main Tunnel: Section 7, Chamber 42</li>
+                <li>Emergency Contact: Use the red alert pheromone pattern</li>
+                <li>Business Inquiries: Blue trail markers to Chamber 15</li>
+            </ul>
         </section>
-        <section class="contact-form">
-            <h2>Send a Message</h2>
-            <form>
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" required><br>
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" required><br>
-                <label for="message">Message:</label><br>
-                <textarea id="message" name="message" required></textarea><br>
-                <button type="submit" class="button">Send Message</button>
-            </form>
+        <section>
+            <h2>Social Networks</h2>
+            <ul>
+                <li>AntHill: @vojtech_the_ant</li>
+                <li>LeafBook: Vojtěch Ant</li>
+                <li>PheromoneGram: @data_ant</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Colony Visits</h2>
+            <p>Feel free to visit our colony! We're located under the big oak tree in Central Park. Look for the entrance marked with three red leaves.</p>
         </section>
     </main>
 </body>
