--- a/experience.html
+++ b/experience.html
@@ -17,67 +17,39 @@
         <a href="./blog.html">Blog</a>
     </nav>
     <main>
-        <h1>Experience</h1>
-        <section class="timeline">
-            <div class="job">
-                <h2>Data Science Manager — Gen (Avast, Norton, AVG)</h2>
-                <p class="date">June 2024 – Present</p>
-                <ul>
-                    <li>Managing a globally distributed data science team</li>
-                    <li>Overseeing large-scale marketing budgets and attribution models</li>
-                    <li>Developing MMMs, spend curves, and LTV models on GCP</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h2>Principal Data Scientist — Gen</h2>
-                <p class="date">June 2023 – July 2024</p>
-                <ul>
-                    <li>Led ROI modeling for 9-digit marketing budgets</li>
-                    <li>Refactored ML pipelines and optimized cloud workflows</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h2>Senior Data Scientist — Gen</h2>
-                <p class="date">July 2021 – June 2023</p>
-                <ul>
-                    <li>Built mobile analytics infrastructure</li>
-                    <li>Led smart pricing, churn reduction, and campaign optimization</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h2>Data Scientist — Mondelēz</h2>
-                <p class="date">Aug 2020 – Feb 2021</p>
-                <ul>
-                    <li>Forecasting chocolate & biscuit sales across Europe</li>
-                    <li>Improved model accuracy by up to 10%</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h2>Data Scientist — PwC</h2>
-                <p class="date">Sep 2018 – Aug 2020</p>
-                <ul>
-                    <li>Developed dynamic pricing models and HR risk prediction</li>
-                    <li>Led analytics consulting for banking & insurance</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h2>BI Analyst — Avast / AVG</h2>
-                <p class="date">2016 – 2018</p>
-                <ul>
-                    <li>Built dashboards, consolidated data, and delivered reports to top management</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h2>Other Roles</h2>
-                <ul>
-                    <li>Česká Spořitelna – Leadership program</li>
-                    <li>Arcadis – Geophysical data analyst</li>
-                </ul>
-            </div>
+        <h1>Work Experience</h1>
+        
+        <section>
+            <h2>Senior Data Analyst</h2>
+            <h3>Great Ant Colony</h3>
+            <p class="date">2020 - Present</p>
+            <ul>
+                <li>Led a team of 50 worker ants in optimizing food collection routes</li>
+                <li>Developed new pheromone trail patterns that increased efficiency by 200%</li>
+                <li>Implemented advanced tunnel ventilation systems</li>
+            </ul>
         </section>
-        <section class="cv-download">
-            <h2>Download CV</h2>
-            <a href="vojtech_nedved_cv.pdf" download class="button">Download my CV (PDF)</a>
+
+        <section>
+            <h2>Colony Defense Strategist</h2>
+            <h3>Northern Ant Federation</h3>
+            <p class="date">2018 - 2020</p>
+            <ul>
+                <li>Designed early warning systems for spider attacks</li>
+                <li>Coordinated defense strategies with neighboring colonies</li>
+                <li>Reduced colony casualties by 75%</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Food Storage Specialist</h2>
+            <h3>Eastern Ant Collective</h3>
+            <p class="date">2016 - 2018</p>
+            <ul>
+                <li>Optimized food preservation techniques</li>
+                <li>Managed inventory of 1000+ food chambers</li>
+                <li>Developed new methods for sugar crystal storage</li>
+            </ul>
         </section>
     </main>
 </body>
