--- a/hobbies.html
+++ b/hobbies.html
@@ -19,16 +19,20 @@
     <main>
         <h1>My Hobbies</h1>
         <section>
-            <h2>Outdoor Activities</h2>
-            <p>I enjoy spending time outdoors, whether it's hiking, cycling, or exploring new places.</p>
+            <h2>Tunnel Architecture</h2>
+            <p>I love designing and building new tunnel systems in my free time. My latest project is a spiral ventilation system that doubles as a recreational area for young ants.</p>
         </section>
         <section>
-            <h2>Reading</h2>
-            <p>I'm an avid reader, particularly interested in science fiction, technology, and personal development books.</p>
+            <h2>Pheromone Art</h2>
+            <p>I create abstract patterns using different pheromone combinations. My work has been featured in the Annual Ant Art Exhibition.</p>
         </section>
         <section>
-            <h2>Technology</h2>
-            <p>In my free time, I like to experiment with new technologies and stay up to date with the latest developments in data science and machine learning.</p>
+            <h2>Leaf Collection</h2>
+            <p>I'm an avid collector of rare and interesting leaves. My collection includes specimens from over 50 different tree species.</p>
+        </section>
+        <section>
+            <h2>Ant Sports</h2>
+            <p>I participate in competitive leaf-carrying races and tunnel-digging competitions. Last year, I won the Regional Leaf Relay Championship!</p>
         </section>
     </main>
 </body>
