--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <a href="./blog.html">Blog</a>
     </nav>
     <main>
-        <h1>VVVVVVojtěch Nedvěd</h1>
-        <h2>Data Science Manager</h2>
-        <p class="tagline">Transforming data into action.</p>
-        <p class="intro">Leading global analytics teams in building machine learning solutions for marketing optimization, pricing, and more.</p>
-        <img src="profile.jpg" alt="Vojtěch Nedvěd" style="max-width:300px; border-radius: 50%;">
+        <h1>Vojtěch the Ant</h1>
+        <h2>Senior Data Analyst of the Great Ant Colony</h2>
+        <p class="tagline">Transforming sugar crystals into colony success.</p>
+        <p class="intro">Leading a team of worker ants in building advanced tunnel systems and optimizing food collection strategies for our underground metropolis.</p>
+        <img src="profile.jpg" alt="Vojtěch the Ant" style="max-width:300px; border-radius: 50%;">
     </main>
 </body>
 </html> 
