--- a/projects.html
+++ b/projects.html
@@ -17,48 +17,36 @@
         <a href="./blog.html">Blog</a>
     </nav>
     <main>
-        <h1>Selected Projects</h1>
-        <section class="projects-grid">
-            <div class="project">
-                <h2>Universal ROI Engine</h2>
-                <p>Modeled thousands of spend curves for marketing investment impact</p>
-                <div class="project-details">
-                    <span class="tag">Marketing Analytics</span>
-                    <span class="tag">Machine Learning</span>
-                </div>
-            </div>
-            <div class="project">
-                <h2>LTV Prediction Framework</h2>
-                <p>Forecasted channel-level LTV across global brands</p>
-                <div class="project-details">
-                    <span class="tag">Predictive Analytics</span>
-                    <span class="tag">Marketing</span>
-                </div>
-            </div>
-            <div class="project">
-                <h2>Smart Pricing</h2>
-                <p>Built price optimization models for mobile and banking use cases</p>
-                <div class="project-details">
-                    <span class="tag">Optimization</span>
-                    <span class="tag">ML</span>
-                </div>
-            </div>
-            <div class="project">
-                <h2>Illness Prediction Model</h2>
-                <p>Reduced HR costs via Spark-based predictive model</p>
-                <div class="project-details">
-                    <span class="tag">Spark</span>
-                    <span class="tag">HR Analytics</span>
-                </div>
-            </div>
-            <div class="project">
-                <h2>Upsell/Cross-sell Engine</h2>
-                <p>Built generalizable scoring solution for large corporates</p>
-                <div class="project-details">
-                    <span class="tag">ML</span>
-                    <span class="tag">Business Intelligence</span>
-                </div>
-            </div>
+        <h1>Ant Projects</h1>
+        
+        <section>
+            <h2>Underground Metropolis Expansion</h2>
+            <p>Led the design and implementation of a new wing in our colony, featuring advanced ventilation systems and optimized food storage chambers.</p>
+            <ul>
+                <li>Increased colony capacity by 300%</li>
+                <li>Reduced energy consumption by 40%</li>
+                <li>Implemented revolutionary tunnel architecture</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Pheromone Communication Network</h2>
+            <p>Developed a new system of pheromone trails that revolutionized how our colony communicates and coordinates activities.</p>
+            <ul>
+                <li>Reduced communication time by 75%</li>
+                <li>Improved emergency response efficiency</li>
+                <li>Enhanced food source discovery</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Colony Defense System</h2>
+            <p>Created an advanced warning system that protects our colony from predators and environmental threats.</p>
+            <ul>
+                <li>Early detection of spider movements</li>
+                <li>Automated tunnel sealing mechanisms</li>
+                <li>Integration with neighboring colonies</li>
+            </ul>
         </section>
     </main>
 </body>
