--- a/index.html
+++ b/index.html
@@ -3,25 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vojtěch Nedvěd | Data Science Manager</title>
+    <title>Vojtěch the Ant | Senior Data Analyst</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <a href="./index.html">Home</a>
-        <a href="./about.html">About</a>
-        <a href="./experience.html">Experience</a>
-        <a href="./projects.html">Projects</a>
-        <a href="./contact.html">Contact</a>
-        <a href="./hobbies.html">Hobbies</a>
-        <a href="./blog.html">Blog</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="experience.html">Experience</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="blog.html">Blog</a>
     </nav>
     <main>
-        <h1>Vojtěch the Ant</h1>
-        <h2>Senior Data Analyst of the Great Ant Colony</h2>
-        <p class="tagline">Transforming sugar crystals into colony success.</p>
-        <p class="intro">Leading a team of worker ants in building advanced tunnel systems and optimizing food collection strategies for our underground metropolis.</p>
-        <img src="profile.jpg" alt="Vojtěch the Ant" style="max-width:300px; border-radius: 50%;">
+        <section class="hero">
+            <img src="profile.jpg" alt="Vojtěch the Ant" class="profile-image">
+            <h1>Vojtěch the Ant</h1>
+            <h2>Senior Data Analyst of the Great Ant Colony</h2>
+            <p class="tagline">Transforming sugar crystals into colony success</p>
+            <p class="intro">Leading a team of worker ants in building advanced tunnel systems and optimizing food collection strategies for our underground metropolis.</p>
+        </section>
+        
+        <section class="highlights">
+            <div class="highlight-card">
+                <h3>Data Analysis</h3>
+                <p>Expert in pheromone pattern analysis and colony optimization</p>
+            </div>
+            <div class="highlight-card">
+                <h3>Leadership</h3>
+                <p>Managing teams of worker ants in complex tunnel projects</p>
+            </div>
+            <div class="highlight-card">
+                <h3>Innovation</h3>
+                <p>Pioneering new methods in ant colony architecture</p>
+            </div>
+        </section>
     </main>
 </body>
 </html> 
